<resources>
    <string name="travel_plans_self">My Travel Plans</string>
    <string name="travel_plans_other">My Travel Plans</string>
    <string name="end_start">Over time is not less than start time or the current time, please choose again</string>
    <string name="start_end">Start time is not greater than end time, please choose again</string>
    <string name="create">Create</string>
    <string name="follow">Following</string>
    <string name="path_edit_0_local_1">- Find locals for homestay or home meals.</string>
    <string name="path_edit_0_local_2">- Meet locals and take part in awesome activities.</string>
    <string name="path_edit_0_local_3">- Connect with fellow travelers in the area.</string>
    <string name="path_edit_0_traveler_1">- Share your local culture.</string>
    <string name="path_edit_0_traveler_2">- Host curious travelers for meals and homestays.</string>
    <string name="path_edit_0_traveler_3">- Create awesome activities for travelers to join.</string>
    <string name="path_edit_next">NEXT</string>
    <string name="path_dialog_title">Come back to this later?</string>
    <string name="group_size">Group Size</string>
    <string name="budget">Budget</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="description_">Description</string>
    <string name="not_save">Don\'t Save</string>
    <string name="fail_del_notify">Failed to delete Notification</string>
    <string name="no_city">There are no Cities for this Country yet!</string>
    <string name="enter_name">Enter a username</string>
    <string name="choose_condition">Please choose your search condition</string>
    <string name="error_photo">Error attempting to crop photo</string>
    <string name="error_select_photo">Error selecting photo</string>
    <string name="unable_sd">Unable to access images: SD card is not mounted</string>
    <string name="image_crop">Image cropped!</string>
    <string name="fail_image_crop">Error: Failed to crop image!</string>
    <string name="max_img">Maximum images selected</string>
    <string name="fail_upload_avatar">Failed to upload avatar</string>
    <string name="choose_you">Please select whether you are a Local or a Traveler</string>
    <string name="enter_title">Please enter an Activity Title!</string>
    <string name="country_select">Please select country!</string>
    <string name="enter_detail_address">Detailed address</string>
    <string name="select_date">Please select the date!</string>
    <string name="description_enter">Please enter the description!</string>
    <string name="choose_picture">Please choose a picture!</string>
    <string name="app_name">LingoX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_ack_msg">Acknowledge</string>
    <string name="text_delivered_msg">Delivered</string>
    <string name="back">Back</string>
    <string name="save">OK</string>
    <string name="button_pushtotalk">Push To Talk</string>
    <string name="button_send">send</string>
    <string name="button_reply">Comment</string>
    <string name="attach_smile">Smile</string>
    <string name="attach_picture">Picture</string>
    <string name="attach_take_pic">Photo</string>
    <string name="attach_location">Location</string>
    <string name="attach_file">File</string>
    <string name="attach_video">Video</string>
    <string name="attach_voice_call">Voice Call</string>
    <string name="user_card">User Card</string>
    <string name="move_up_to_cancel">Move Up To Cancel</string>
    <string name="release_to_cancel">Release To Cancel</string>
    <string name="send_fail">Send Failed</string>
    <string name="delete_message">Delete Message</string>
    <string name="copy_message">Copy Message</string>
    <string name="delete_voice">Delete Voice</string>
    <string name="delete_video">Delete Video</string>
    <string name="delete">DELETE</string>
    <string name="resend">Resend</string>
    <string name="confirm_resend">Confirm Resend</string>
    <string name="connect_failuer_toast">Connect Failed</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="button_logout">Log out</string>
    <string name="button_uploadlog">Upload Log</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="leave">Leave</string>
    <string name="prompt">Prompt</string>
    <string name="clear_records">Clear Records</string>
    <string name="location_recv">[%1$s的location]</string>
    <string name="location_message">Location Message</string>
    <string name="recording_video">Record Video</string>
    <string name="location_prefix">[My Location]</string>
    <string name="voice">[Voice]</string>
    <string name="picture">[Picture]</string>
    <string name="video">[Video]</string>
    <string name="file">[File]</string>
    <string name="voice_call">[Voice Call]</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_search">Search</string>
    <string name="button_add">Add</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">Network Unavailable</string>
    <string name="recoding_fail">Record Failed！</string>
    <string name="select_contacts">Select Contacts</string>
    <string name="confirm_forward_to">Confirm forward to：%1$s ?</string>
    <string name="logout">Log out</string>
    <string name="logout_hint">Exiting the app will not log you out.</string>
    <string name="exit_group_hint">After you leave, you will no longer receive notifications from this group chat</string>
    <string name="dissolution_group_hint">After exiting, this group will be disbanded</string>
    <string name="exit_group">Exit</string>
    <string name="connect_conflict">Account Conflict</string>
    <string name="ellipsis">…</string>
    <string name="pick_time">Select Time</string>
    <string name="pick_date">Select Date</string>
    <string name="pick_location">Select Country and City</string>
    <string name="Network_error">Network error</string>
    <string name="please_check">Please Check</string>
    <string name="Making_sure_your_location">Making_sure_your_location</string>
    <string name="set_activity_time">When is your activity?</string>
    <string name="set_activity_place">Where is your activity?</string>
    <string name="set_activity_offer">What will your offer?</string>
    <string name="set_activity_description">Description of your activity</string>
    <string name="traveler_or_expat">Traveller or Expat</string>
    <string-array name="interest_list">
        <item>Interested in…</item>
        <item>Music</item>
        <item>Reading</item>
        <item>Running</item>
        <item>Dancing</item>
        <item>Movie</item>
        <item>Sports</item>
    </string-array>
    <string name="level">Level</string>
    <string-array name="major">
        <item>Select Profession</item>
        <item>Student</item>
        <item>Accounting/Auditing</item>
        <item>Administration</item>
        <item>Advertising</item>
        <item>Analyst</item>
        <item>Art/Creative</item>
        <item>Business Development</item>
        <item>Consulting</item>
        <item>Customer Service</item>
        <item>Distribution</item>
        <item>Design</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Finance</item>
        <item>General Business</item>
        <item>Health Care Provider</item>
        <item>Information Technology</item>
        <item>Legal</item>
        <item>Management</item>
        <item>Manufacturing</item>
        <item>Marketing</item>
        <item>Manufacturing</item>
        <item>Public Relations</item>
        <item>Purchasing</item>
        <item>Product Management</item>
        <item>Production</item>
        <item>Quality Assurance</item>
        <item>Sales</item>
        <item>Research</item>
        <item>Science</item>
        <item>Strategy/Planning</item>
        <item>Writing/Editing</item>
        <item>Other</item>
    </string-array>
    <string-array name="sex">
        <item>Select gender…</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="host">
        <item>Couchsurfing…</item>
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>
    <string name="enter_comment">Please enter a comment!</string>
    <string name="fail_get_reference">Failed to get User\'s References</string>
    <string name="fail_down_user"> Failed to download User Info</string>
    <string name="fail_down_path">Failed to download Path Info</string>
    <string name="fail_comment_del">Failed to delete comment</string>
    <string name="fail_jion">Failed to Join this Activity</string>
    <string name="fail_comment"> Failed to post comment</string>
    <string name="local">Local Guide</string>
    <string name="meal">Home Meal</string>
    <string name="available">Available</string>
    <string name="stay">Home Stay</string>
    <string name="userinfo_follow">Following</string>
    <string name="userinfo_following">Followers</string>
    <string name="userinfo_reference">References</string>
    <string name="userinfo_male">Male</string>
    <string name="userinfo_female">Female</string>
    <string name="path_chat">JOIN</string>
    <string name="path_cancle">Cancle</string>
    <string name="path_groups">Groups</string>
    <string name="path_particpants">Particpants</string>
    <string name="path_share">Share</string>
    <string name="path_comments">Comments</string>
    <string name="user_local"> Local Guide</string>
    <string name="user_meal"> Home Meal</string>
    <string name="user_stay"> Home Stay</string>
    <string name="user_follow">+ Follow</string>
    <string name="user_unfollow">Unfollow</string>
    <string name="user_reference">+Reference</string>
    <string name="user_album">Album</string>
    <string name="user_about">More About\t</string>
    <string name="user_self">Come and introduce yourself!</string>
    <string name="user_speak">Select language(s)</string>
    <string name="user_professional_info">Click on the select professional</string>
    <string name="user_professional">Professional</string>
    <string name="user_interest">Select interests</string>
    <string name="choose">Choose</string>
    <string name="from">From </string>
    <string name="date">Yesterday</string>
    <string name="nearby_sheak">Speak </string>
    <string name="path_local">Local</string>
    <string name="path_traveler">Traveler</string>
    <string name="location">Location:</string>
    <string name="gender">Gender</string>
    <string name="couchsurfing">Availability:</string>
    <string name="profession">Profession:</string>
    <string name="interests">Interests</string>
    <string name="done">DONE</string>
    <string name="country_flag">UserCountryFlag</string>
    <string name="activity_table">ACTIVITY</string>
    <string name="username">username</string>
    <string name="date_time">DateTime</string>
    <string name="avatar">Avatar:</string>
    <string name="complete_tour_info">Complete Your Info</string>
    <string name="age">Age</string>
    <string name="eg_interest">Type to add…(eg.reading, running)</string>
    <string name="signature">About me:</string>
    <string name="eg_signature">Type to add…(eg.reading, running)</string>
    <string name="add_now">Add new</string>
    <string name="cost">Budget:</string>
    <string name="group_chat">GROUP CHAT</string>
    <string name="apply">JOIN</string>
    <string name="content_reference">Type to add reference....</string>
</resources>