<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_page_0"
    style="@style/match_match"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/i_am"
        style="@style/shadow_style"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/as_local"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/adsf"
        style="@style/match_wrap"
        android:layout_below="@+id/i_am"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/path_edit_local"
            style="@style/wrap_wrap"
            android:background="@drawable/button_border_blue"
            android:text="@string/path_local"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/path_edit_traveler"
            style="@style/wrap_wrap"
            android:layout_marginLeft="40dp"
            android:background="@drawable/button_border_blue"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/path_traveler"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zxcv"
        style="@style/match_wrap"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="2dp"
        android:background="#9000"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/path_edit_1"
            style="@style/match_wrap"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:text="@string/path_edit_0_local_1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/path_edit_2"
            style="@style/match_wrap"
            android:paddingLeft="8dp"
            android:text="@string/path_edit_0_local_2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/path_edit_3"
            style="@style/match_wrap"
            android:layout_marginBottom="10dp"
            android:paddingLeft="8dp"
            android:text="@string/path_edit_0_local_3"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>