<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/main_color">

        <LinearLayout
            android:id="@+id/layout_back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/text_selector">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_arrow_back_white_48dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="64dp"
            android:alpha="1.0"
            android:text="@string/complete_tour_info"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_more_vert_white_48dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_bottom"
        android:layout_below="@+id/layout_title"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:shrinkColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_image"
                        android:text="@string/avatar"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right">

                        <ImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/avatar" />

                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_username"
                        android:text="@string/username"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/username"
                        android:gravity="right"
                        android:textColorHint="@android:color/black"
                        android:textSize="16sp" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/age"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <Spinner android:id="@+id/spinner_age" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/gender"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <Spinner android:id="@+id/spinner_sex" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/couchsurfing"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <Spinner android:id="@+id/spinner_host" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/profession"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <Spinner android:id="@+id/spinner_major" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/interests"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />


                    <EditText
                        android:id="@+id/interest"
                        android:hint="@string/eg_interest"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/signature"
                        android:textColor="@color/main_color"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/signature"
                        android:hint="@string/eg_signature"
                        android:textSize="16sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_bottom"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/line1" />

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp"
            android:alpha="0.87"
            android:background="@drawable/text_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/done"
            android:textColor="@color/main_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>