<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_dialog"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="#efeff4"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/main_color">

        <TextView
            android:id="@+id/title_reference_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:alpha="1.0"
            android:text="@string/add_now"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/abcdefg"
        android:layout_below="@id/layout_title"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:hint="@string/content_reference"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="18sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/abcdefg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_selector"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>