<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE">

    <ImageView
        android:id="@+id/path_user_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="User avatar"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_avatar" />

    <ImageView
        android:id="@+id/path_user_flag"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_alignBottom="@+id/path_user_avatar"
        android:layout_alignEnd="@+id/path_user_avatar"
        android:layout_alignRight="@+id/path_user_avatar"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/country_flag" />

    <RelativeLayout
        android:id="@+id/path_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/path_user_avatar">

        <TextView
            android:id="@+id/path_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/username"
            android:textColor="@color/main_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/path_datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_user_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_event_note_grey600_18dp"
            android:drawablePadding="5dp"
            android:text="@string/date_time"
            android:textAppearance="@style/Type" />


        <TextView
            android:id="@+id/path_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_datetime"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_local_atm_grey600_18dp"
            android:drawablePadding="5dp"
            android:maxLines="2"
            android:text="@string/cost"
            android:textAppearance="@style/Type" />

        <TextView
            android:id="@+id/capacity_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_cost"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_people_grey600_18dp"
            android:drawablePadding="5dp"
            android:maxLines="2"
            android:textAppearance="@style/Type" />

        <TextView
            android:id="@+id/path_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacity_activity"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:drawableLeft="@drawable/ic_place_grey600_18dp"
            android:drawablePadding="5dp"
            android:text="@string/location"
            android:textAppearance="@style/Type" />

        <TextView
            android:id="@+id/path_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capacity_activity"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@+id/path_location"
            android:drawablePadding="5dp"
            android:text="@string/location"
            android:textAppearance="@style/Type" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/path_detail_address"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/path_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_table"
                android:textAppearance="@style/TextBlack"
                android:textIsSelectable="true" />
        </ScrollView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/path_information"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/path_accept_button"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:textColor="@color/main_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/group_chat"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_chat"
            android:textColor="@color/main_color"
            android:textSize="12sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/path_share_button"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/main_color"
            android:textSize="12sp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/path_loading_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>