<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/match_wrap"
        android:layout_marginTop="1dp"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="copy"
        android:padding="10dp"
        android:text="@string/copy_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/match_wrap"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="delete"
        android:padding="10dp"
        android:text="@string/delete_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <TextView
        style="@style/match_wrap"
        android:background="@drawable/context_menu_item_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="forward"
        android:padding="10dp"
        android:text="@string/forward"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>